# unifi-camera-manager

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  LICENSE.md  README.md  auth_test_results_192_168_10_12.json  config.yaml  hello.py  pyproject.toml
docs/: ARCHITECTURE.md  api-reference.md  docs  index.md  workflows.md
docs/modules/: axis_config.md  axis_diagnostics.md  axis_lldp.md  axis_logs.md  cli.md  client.md  config.md  logging_config.md  models.md  onvif_discovery.md  onvif_manager.md
src/unifi_camera_manager/: __init__.py  axis_config.py  axis_diagnostics.py  axis_lldp.py  axis_logs.py  cli.py  client.py  config.py  logging_config.py  models.py  onvif_discovery.py  onvif_manager.py
tests/: __init__.py  conftest.py  test_axis_auth.py  test_axis_logs.py  test_config.py  test_models.py
