[project]
name = "unifi-camera-manager"
version = "0.1.0"
description = "CLI tool to manage UniFi Protect cameras including third-party ONVIF cameras"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "onvif-zeep-async>=4.0.4",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.2",
    "rich>=14.2.0",
    "typer>=0.21.1",
    "uiprotect>=8.0.0",
]

[project.scripts]
ucam = "unifi_camera_manager.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/unifi_camera_manager"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
